--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,8 @@ Description: Miscellaneous Tools for Work.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Depends:
+    R (>= 3.5.0)
 Imports: 
     crayon (>= 1.3.4),
     dplyr (>= 0.8.3),
