--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,18 +5,25 @@ export(build_my_env)
 export(cal_cagr)
 export(cal_growth_rate)
 export(cal_share)
+export(get_past_year)
+export(period_month)
+export(period_year)
 export(rpt_area_value)
 export(rpt_country_value)
 export(rpt_mof_industry_region)
 export(str2regex)
+export(toChString)
 export(tt_bind_area)
 export(tt_bind_industry)
 export(tt_df_show)
 export(tt_filter_by_area)
 export(tt_filter_by_hscode)
 export(tt_get_path)
+export(tt_hscode_show)
 export(tt_ls)
 export(tt_read_mof)
 export(tt_read_table)
+export(y2date)
+export(ym2date)
 importFrom(stats,aggregate)
 importFrom(utils,View)
