add test funciton

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(rpt_country_value)
 export(rpt_mof_industry_region)
 export(str2regex)
 export(toChString)
+export(tt_area_show)
 export(tt_bind_area)
 export(tt_bind_industry)
 export(tt_df_show)
