--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,14 +18,17 @@ export(toChString)
 export(tt_area_show)
 export(tt_bind_area)
 export(tt_bind_industry)
+export(tt_convert_industry_name)
 export(tt_df_show)
 export(tt_filter_by_area)
 export(tt_filter_by_hscode)
 export(tt_get_path)
 export(tt_hscode_show)
 export(tt_ls)
+export(tt_order_by_industry_for_reports)
 export(tt_read_mof)
 export(tt_read_table)
+export(tt_vroom_mof)
 export(y2date)
 export(ym2date)
 importFrom(magrittr,"%>%")
