--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: taitratools
 Title: TAITRA Tools
-Version: 1.0.1
+Version: 1.0.3
 Authors@R: 
     person(given = "Peter",
            family = "Tseng",
@@ -9,7 +9,7 @@ Authors@R:
 Description: Miscellaneous Tools for Work.
 License: MIT + file LICENSE
 Depends:
-    R (>= 3.5.0)
+    R (>= 3.6.0)
 Imports: 
     crayon (>= 1.3.4),
     dplyr (>= 0.8.3),
@@ -24,7 +24,8 @@ Imports:
     stringr (>= 1.4.0),
     tibble (>= 2.1.3),
     tidyr (>= 1.0.0),
-    tidyselect (>= 0.2.5)
+    tidyselect (>= 0.2.5),
+    vroom (>= 1.0.2)
 Suggests: 
     testthat (>= 2.2.1)
 Encoding: UTF-8
