--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: taitratools
 Title: TAITRA Tools
-Version: 1.0.3
+Version: 1.0.4
 Authors@R: 
     person(given = "Peter",
            family = "Tseng",
@@ -21,11 +21,13 @@ Imports:
     readr (>= 1.3.1),
     readxl (>= 1.3.1),
     rlang (>= 0.4.0),
+    rvest (>= 0.3.4),
     stringr (>= 1.4.0),
     tibble (>= 2.1.3),
     tidyr (>= 1.0.0),
     tidyselect (>= 0.2.5),
-    vroom (>= 1.0.2)
+    vroom (>= 1.0.2),
+    xml2 (>= 1.2.2)
 Suggests: 
     testthat (>= 2.2.1)
 Encoding: UTF-8
