--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,17 +15,21 @@ export(rpt_country_value)
 export(rpt_mof_industry_region)
 export(str2regex)
 export(toChString)
+export(tt_English2Chinese)
 export(tt_area_show)
 export(tt_bind_area)
 export(tt_bind_industry)
 export(tt_convert_industry_name)
+export(tt_df_lower_name)
 export(tt_df_show)
+export(tt_df_upper_name)
 export(tt_filter_by_area)
 export(tt_filter_by_hscode)
 export(tt_get_path)
 export(tt_hscode_show)
 export(tt_ls)
 export(tt_order_by_industry_for_reports)
+export(tt_read_itc_file)
 export(tt_read_mof)
 export(tt_read_table)
 export(tt_vroom_mof)
