--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     vroom (>= 1.0.2),
     xml2 (>= 1.2.2)
 Suggests: 
-    testthat (>= 2.2.1)
+    testthat (>= 2.2.1),
+    roxygen2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
