--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(tt_order_by_industry_for_reports)
 export(tt_read_itc_file)
 export(tt_read_mof)
 export(tt_read_table)
+export(tt_spread_value)
 export(tt_vroom_mof)
 export(y2date)
 export(ym2date)
