--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,12 +19,14 @@ export(tt_English2Chinese)
 export(tt_area_show)
 export(tt_bind_area)
 export(tt_bind_industry)
+export(tt_compare_hscode)
 export(tt_convert_industry_name)
 export(tt_df_lower_name)
 export(tt_df_show)
 export(tt_df_upper_name)
 export(tt_filter_by_area)
 export(tt_filter_by_hscode)
+export(tt_format_hscode)
 export(tt_get_path)
 export(tt_hscode_show)
 export(tt_ls)
