delete update_pkg_data.R and add rpt_mof_exprot_summarise.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(sym)
 export(syms)
 export(toChString)
 export(tt_English2Chinese)
+export(tt_append_area)
 export(tt_append_global)
 export(tt_area_show)
 export(tt_bind_area)
@@ -42,6 +43,7 @@ export(tt_grouped_sum)
 export(tt_hscode_show)
 export(tt_ls)
 export(tt_order_by_industry_for_reports)
+export(tt_parse_date)
 export(tt_read_itc_file)
 export(tt_read_mof)
 export(tt_read_table)
