--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,7 @@ Package: taitratools
 Title: TAITRA Tools
 Version: 1.0.4
 Authors@R: 
-    person(given = "Peter",
-           family = "Tseng",
-           role = c("aut", "cre"),
-           email = "chinhung@taitra.org.tw")
+    person(given = "Peter", family = "Tseng", role = c("aut", "cre"), email = "chinhung@taitra.org.tw")
 Description: Miscellaneous Tools for Work.
 License: MIT + file LICENSE
 Depends:
@@ -27,10 +24,11 @@ Imports:
     tidyr (>= 1.0.0),
     tidyselect (>= 0.2.5),
     vroom (>= 1.0.2),
-    xml2 (>= 1.2.2)
+    xml2 (>= 1.2.2),
+    xlsx (>= 0.6.1)
 Suggests: 
     testthat (>= 2.2.1),
-    roxygen2
+    roxygen2 (>= 6.1.1)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
