--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(build_my_env)
 export(cal_cagr)
 export(cal_growth_rate)
 export(cal_share)
+export(contain_all_keywords)
+export(contain_any_keywords)
 export(enquo)
 export(enquos)
 export(expr)
@@ -17,8 +19,10 @@ export(get_past_year)
 export(numeric2Chinese)
 export(period_month)
 export(period_year)
+export(print_with_time)
 export(rpt_area_value)
 export(rpt_country_value)
+export(rpt_mof_export_summary)
 export(rpt_mof_industry_region)
 export(str2regex)
 export(sym)
@@ -35,12 +39,14 @@ export(tt_convert_industry_name)
 export(tt_df_lower_name)
 export(tt_df_show)
 export(tt_df_upper_name)
+export(tt_ext_world_value)
 export(tt_filter_by_area)
 export(tt_filter_by_hscode)
 export(tt_format_hscode)
 export(tt_get_path)
 export(tt_grouped_sum)
 export(tt_hscode_show)
+export(tt_industry_grouped_sum)
 export(tt_ls)
 export(tt_order_by_industry_for_reports)
 export(tt_parse_date)
