fiexd tt_bind_industry.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(tt_compare_hscode)
 export(tt_convert_industry_name)
 export(tt_df_lower_name)
 export(tt_df_show)
+export(tt_df_sub_hscode)
 export(tt_df_upper_name)
 export(tt_ext_world_value)
 export(tt_filter_by_area)
