add rpt_mof_export_top_n_product.R, tt_parse_hscode.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,9 @@ export(tt_bind_area)
 export(tt_bind_industry)
 export(tt_compare_hscode)
 export(tt_convert_industry_name)
+export(tt_df_filter_top_and_bottom_n)
 export(tt_df_lower_name)
+export(tt_df_mutate_chinese_hscode)
 export(tt_df_show)
 export(tt_df_sub_hscode)
 export(tt_df_upper_name)
@@ -51,6 +53,7 @@ export(tt_industry_grouped_sum)
 export(tt_ls)
 export(tt_order_by_industry_for_reports)
 export(tt_parse_date)
+export(tt_parse_hscode)
 export(tt_read_itc_file)
 export(tt_read_mof)
 export(tt_read_table)
