--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,9 @@ export(print_with_time)
 export(rpt_area_value)
 export(rpt_country_value)
 export(rpt_mof_export_summary)
+export(rpt_mof_export_top_n_product)
 export(rpt_mof_industry_region)
+export(rpt_mof_summary_dev)
 export(str2regex)
 export(sym)
 export(syms)
