--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: taitratools
 Title: TAITRA Tools
-Version: 1.0.6
+Version: 1.0.6.1
 Authors@R: 
     person(given = "Peter", family = "Tseng", role = c("aut", "cre"), email = "chinhung@taitra.org.tw")
 Description: Miscellaneous Tools for Work.
@@ -29,5 +29,6 @@ Suggests:
     testthat (>= 2.2.1),
     roxygen2 (>= 6.1.1)
 Encoding: UTF-8
+StagedInstall: no
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
